# fenris

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ubuntu.yml
cmake/: FindCryptoPP.cmake  Utils.cmake
include/client/: client.hpp  colors.hpp  connection_manager.hpp  interface.hpp  request_manager.hpp  response_manager.hpp
include/common/: color.hpp  compression.hpp  compression_manager.hpp  crypto.hpp  crypto_manager.hpp  error.hpp  file_operations.hpp  logging.hpp  network_utils.hpp  request.hpp  response.hpp
include/server/: cache_manager.hpp  client_info.hpp  connection_manager.hpp  fenris_server_struct.hpp  request_manager.hpp  response_manager.hpp  server.hpp
proto/: CMakeLists.txt  fenris.proto
src/client/: CMakeLists.txt  client.cpp  colors.cpp  connection_manager.cpp  interface.cpp  main.cpp  request_manager.cpp  response_manager.cpp
src/common/: CMakeLists.txt  compression.cpp  compression_manager.cpp  crypto.cpp  crypto_manager.cpp  file_operations.cpp  logging.cpp  network_utils.cpp  request.cpp  response.cpp
src/server/: CMakeLists.txt  cache_manager.cpp  client_info.cpp  connection_manager.cpp  fenris_server_struct.cpp  main.cpp  request_manager.cpp  response_manager.cpp  server.cpp
tests/: CMakeLists.txt  ClientInterfaceTesting.cpp  a.out
tests/src/: example_test.cpp
tests/unittests/: CMakeLists.txt
tests/unittests/client/: CMakeLists.txt  client_connection_manager_test.cpp  client_integration_test.cpp  client_request_manager_test.cpp  client_response_manager_test.cpp
tests/unittests/common/: CMakeLists.txt  compression_test.cpp  ecdh_test.cpp  encryption_test.cpp  file_operations_test.cpp  request_test.cpp  response_test.cpp
tests/unittests/server/: CMakeLists.txt  cache_manager_test.cpp  server_connection_manager_test.cpp
